# linux_sensors

./: .gitignore  CMakeLists.txt  Makefile  README  main.cpp  test.cpp
include/: common.h
include/detector/: anomaly_detector.h  ngrams_transformer.h  ngrams_vector.h  one_class_svm.h  pipeline_estimator.h  red_svd.h  sparse_matrix.h  sparse_svd.h
include/queue/: message_queue.h
include/queue/simple/: simple_queue.h
include/sensor/: base_sensor.h  data_aggregator.h  events_bulk.h  events_measure.h  multithreaded_sensor.h  parallel_worker.h  single_sensor.h  sys_params_record.h  sys_record.h
include/sensor/trace/: sys_params_record.h  syscall_params.h  syscalls.h
include/socket/: linux_server_socket.h  linux_socket.h
include/stream/: base_stream.h  console_stream.h  dumy_stream.h  file_aggr_stream.h  file_stream.h  memory_stream.h  socket_stream.h
include/utils/: comma_numpunct.h  encoding.h  format.h  json.hpp  linux_daemon.h  parallel_worker.h  string_ref.h  sys_params_record.h  sys_record.h  types.h  utils.h
lib/: format.cc  gzstream.C  svm.cpp
